Changelog
=========

1.6 - (unreleased)
-----------------
 * Feature: tags/keywords for an assessment is now calculated dynamically 
       by its related content. better view of tags and metadata [demarant]
 * Feature: customize assessment/@@createVersion to allow choosing the destination of that version [tiberich #3539]
 * Bug fix: Add "one_state_workflow" [tiberich #3152]
 * Bug fix: When set versionId on adding an assessment, also look for IndicatorFactSheets
   with same indicator set [ghicaale #3491]
 * Bug fix: Reindex child assessment objects when saving 'codes' on a specification [ghicaale #3491]
 * Bug fix: Fix wrong check for EEA Data metatype [tiberich #3541]
 * Bug fix: Fixed indicator code validator. Now an IndicatorFachtSheet validate its code
   upon Assessments [ghicaale #3491]
 * Bug fix: Fixed versions display of assessments on same Specification versioning set [ghicaale #3491]
 * Change: Removed custom Title function, we do not need to show version info in title for specifications [demarant]
 * Bug fix/Change: Fixed wrong label on IndicatorFactSheet for assessment text, adjusted more fields labels and
   descriptions [demarant]

1.5 - (2010-08-04)
------------------
* Fixed missing "More updates info box" in assessment and adjusted design and position on both [demarant]
* Consistent order of fields under aggregated edit of assessment as in the view. [demarant]
* Fix: unicode error in Specification.SearchableText,
       Assessment.SearchableText and IndicatorFactSheet.SearchableText [ghicaale]
* Hide metadata divs from display in active_field and active_region macros [tiberich]
* Fix display and sorting of Assessments for a Specification agg edit. [tiberich]
* Add custom AssessmentPart edit template, to make it include
  eea.relations JS scripts [tiberich]
* Mark Ownership field as mandatory in agg edit [tiberich]
* Code cleanup in browser/assessment.py to eliminate duplicated code
  from eea.versions [tiberich]

1.4 - (2010-07-08)